--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 a {
 		font-family: monospace;
 		text-align: center;
-		font-size: 30px;}
+		font-size: 30px;
+		text-decoration: none;}
 .opis-dubaju {
 		font-size: 20px;
 		text-align: center;
